1999-02-06  Mark Galassi  <rosalia@cygnus.com>

	* NEWS: udpated in occasion of the imminent 0.4.1 release.

Sun Feb 14 20:47:07 1999  Brian Gough  <bjg@netsci.freeserve.co.uk>

	* Makefile.am: added gsl_mode.h to include_HEADERS

Mon Feb  8 18:39:35 1999  Brian Gough  <bjg@netsci.freeserve.co.uk>

	* added new type gsl_function for arbitrary functions with
 	parameters, and gsl_fdf for functions and their derivatives

Mon Feb  8 18:39:35 1999  Brian Gough  <bjg@netsci.freeserve.co.uk>

	* gsl_complex.h: added GSL_SET_REAL(&z,x) and GSL_SET_IMAG(&z,y),
 	changed GSL_COMPLEX_SET(z,x,y) to GSL_SET_COMPLEX(&z,x,y) to match.

1999-01-03  Mark Galassi  <rosalia@cygnus.com>

	* Makefile.am, autogen.sh: improved autogen.sh, based on the gtk+
	autogen.sh.  Added it to Makefile.am's EXTRA_DIST list.

1999-01-02  Mark Galassi  <rosalia@cygnus.com>

	* configure.in: introduced a test for hypot(), in case a system
	does not have it.

1999-01-03  Mark Galassi  <rosalia@cygnus.com>

	* autogen.sh: added this simple script which calls aclocal,
	automake --add-missind and autoconf, followed by ./configure with
	all the arguments.

	* configure, Makefile.in, */Makefile.in: removed these
	auto-generated files.

Fri Dec 11 16:50:27 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* AUTHORS: corrected the spelling of Gerard Jungman's name (it's
 	either Gerard or Jerry, but not Gerry)

1998-12-05  Mark Galassi  <rosalia@cygnus.com>

	* configure.in: made the version be 0.4after so it's clear that
	snapshots will be post-0.4.

	* HACKING: updated a bit to work with the new CVS repository.

Mon Nov 23 16:09:21 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl_config.h: removed, it was an unnecessary hack just for
 	defining macros. Autoconf's config.h should be used by the
 	programmer instead.
 
Sat Nov 21 20:39:14 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* texinfo.tex: removed, this is a duplicate and shouldn't be
 	needed in the top-level directory (it is in docs)
