@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(gsl_math.h)
-AM_INIT_AUTOMAKE(gsl, 0.4after)
+AM_INIT_AUTOMAKE(gsl, 0.4.1)
 AM_CONFIG_HEADER(config.h)
 
 dnl things required by automake
